trunk/Archive2/e3/a4e8bcd4d731ce/output
main.cpp: In static member function 'static void Service::Logger::log(Service*)':
main.cpp:16:12: error: 'std::string BaseService::baseDataPrivate' is private
     string baseDataPrivate;
            ^
main.cpp:78:13: error: within this context
     ECHO(s->baseDataPrivate);
             ^
main.cpp:5:30: note: in definition of macro 'ECHO'
 #define ECHO(v) std::cout << v << std::endl;
                              ^
